--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^9.9.0",
     "ncp": "^2.0.0",
     "prettier": "^2.8.4",
+    "sass": "^1.60.0",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4"
