--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@arcgis/core": "^4.26.5",
+    "@element-plus/icons-vue": "^2.1.0",
     "@vueuse/core": "^9.13.0",
     "element-plus": "^2.3.1",
     "pinia": "^2.0.32",
