--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "element-plus": "^2.3.1",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.0.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
